Mon Nov 16 18:45:43 CET 2009 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos2d/Insertion.java
	  src/org/jcae/mesh/amibe/algos3d/Remesh.java: Nodes cannot be
	inserted if they would be too near of an existing point.  But
	some long edges can then not be split.  When this happens,
	lower minlen to try harder to split long edges.
	* src/org/jcae/mesh/amibe/algos2d/Insertion.java
	  src/org/jcae/mesh/amibe/algos3d/Remesh.java: Compute
	position of split points by dichotomy.  Edge was previously
	discretized by a fixed number of segments, and each point was
	tested to find a point at a distance 1 of start point.
	This was inaccurate, candidate point may be at a distance >> 1
	from start point, it could then be too near from end point, and
	as a result no point was inserted on this edge and edges longer
	than sqrt(2) were found in final mesh.
	Now we use dichotomy to find a point at a distance 1 of start
	point, this gives much accurate results and moreover requires
	less computations.

Mon Nov 16 16:44:29 CET 2009 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/patch/Mesh2D.java
	  src/org/jcae/mesh/amibe/patch/Vertex2D.java
	  src/org/jcae/mesh/amibe/patch/VirtualHalfEdge2D.java: Meshes were
	different when run interactively and from MesherTest because the
	pseudorandom numbers generators were initialized by static code.
	They have been replaced by a non-static member in Mesh2D.

Fri Nov 13 16:34:26 CET 2009 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos2d/Insertion.java
	  src/org/jcae/mesh/amibe/algos3d/Remesh.java: These algorithms
	were designed to cut edges longer than 2 (in a unit mesh).  But
	there was a bug, edges smaller than 1+sqrt(1/2) could not be split,
	and thus final mesh could contain edges longer than sqrt(2).
	With these changes, the number of nodes is increased by 10%-20%.
	* src/org/jcae/mesh/amibe/algos2d/Insertion.java