@@ -1,3 +1,8 @@
+Sun Nov 22 22:47:08 CET 2009 Denis Barbier <barbier@users.sourceforge.net>
+
+	* src/org/jcae/mesh/amibe/ds/Mesh.java (buildRidges): Junctions
+	were not detected.
+
 Mon Nov 16 18:45:43 CET 2009 Denis Barbier <barbier@users.sourceforge.net>
 
 	* src/org/jcae/mesh/amibe/algos2d/Insertion.java
